# RoverFlake2

./: .dockerignore  .gitignore  .gitmodules  CMakeLists.txt  Docker.md  DockerInstallation.md  Dockerfile  Makefile  README.md  cameronismydaddy.ino  colcon.defaults.yaml  docker-compose.yml  moteus_dump.jsonl  nmealog.txt  ptzfirm.ino
docs/: endpoints.md
src/arm1_moveit_config/: CMakeLists.txt  package.xml
src/arm1_moveit_config/config/: arm1.rviz
src/arm1_moveit_config/launch/: display.launch  gazebo.launch
src/arm_control/: CMakeLists.txt  README.md  package.xml
src/arm_control/archive/: armServoControl.h
src/arm_control/include/: armControlParams.h  armServoControl.h  cbs_interface.h  controller_config.h  joy_arm_control.h  moteus_control_adapter_node.h  moveit_control.h
src/arm_control/src/: arm_servo_control.cpp  armconfig.cpp  cbs_interface.cpp  joy_arm_control.cpp  moteus_control_adapter_node.cpp  moveit_control.cpp  old_arm_servo.cpp  sim_helper_node.cpp
src/arm_hardware_interface/: .gitignore  CMakeLists.txt  comm_refrence.txt  package.xml  plugins.xml
src/arm_hardware_interface/config/: joint_offsets.yaml  motor_config.yaml
src/arm_hardware_interface/include/: ArmMoteusInterface.h  ArmSerialDriver.h  ArmSerialInterface.h  ArmSerialProtocol.h  arm_telemetry.h  axis_5_6_differential.h  command_log_module.h  moteus_driver_node.h  moteus_protocol.h  motor_config_module.h  motor_status_module.h  plotting_module.h  send_command_module.h
src/arm_hardware_interface/launch/: arm_hardware_bringup.launch.py
src/arm_hardware_interface/src/: ArmSerialDriver.cpp  ArmSerialInterface.cpp  MJ_Serial.cpp  MoteusInterface.cpp  Teensy_Serial.cpp  armprotocol.cpp  moteus_driver_node.cpp  motor_config_module.cpp  motor_status_module.cpp  plotting_module.cpp  poll.cpp  send_command_module.cpp
src/arm_hardware_interface_v2/: CMakeLists.txt  package.xml
src/arm_hardware_interface_v2/include/: arm_commands.h  arm_telemetry.h  moteus_driver_node.h  moteus_poll.h  motor_addressing.h  motor_config.h
src/arm_hardware_interface_v2/src/: moteus_driver_node.cpp  poll.cpp
src/arm_urdf1/: CMakeLists.txt  package.xml
src/arm_urdf1/launch/: display.launch
src/arm_urdf1/urdf/: arm1.urdf
src/aruco_detector/: CMakeLists.txt  package.xml
src/aruco_detector/src/: DetectMarker.cpp  EncodeFeed.cpp  Encoder.cpp
src/cameras_system/: CMakeLists.txt  package.xml
src/cameras_system/src/: camera_sys_publisher_node.cpp  camera_sys_subscriber_node.cpp  sample_msg_node.cpp
src/color_detector/: CMakeLists.txt  package.xml
src/color_detector/src/: color_detector_node.cpp
src/comms_base_control/: CMakeLists.txt  package.xml
src/comms_base_control/src/: death_ray_magnetometer.cpp  death_ray_motor_control.cpp  death_ray_tracking.cpp  motor_control.cpp
src/control_base_hardware_interface/: CMakeLists.txt  package.xml
src/control_base_hardware_interface/src/: arduino_serial_publisher.cpp  fake_robot_arm_publisher.cpp
src/dev_arm_description/: CMakeLists.txt  README.md  package.xml
src/dev_arm_description/meshes/: link_2.STL  link_3.STL  link_4.STL  link_ee.STL
src/dev_arm_description/urdf/: URDF RevA.SLDASM.csv  dev_arm.urdf
src/dev_arm_description_v2/: CMakeLists.txt  package.xml
src/dev_arm_description_v2/config/: joint_names_MAIN Arm Assembly RevB 2025-2026 V6.yaml
src/dev_arm_description_v2/launch/: display.launch  gazebo.launch
src/dev_arm_description_v2/meshes/: a1_shoulder_base.STL  a2_link_1.STL  a3_axis4_housing.STL  a4_link2.STL  a5_internal_upright.STL  a6_EE_holder.STL  base_link.STL  finger_left.STL  finger_right.STL
src/dev_arm_description_v2/temp/: finger_left.STL  finger_right.STL
src/dev_arm_description_v2/textures/: git_dont_delete_me_please.txt
src/dev_arm_description_v2/urdf/: End-Test.urdf  MAIN Arm Assembly RevB 2025-2026 V6.csv  dev_arm.urdf
src/dev_arm_moveit_config_v3/: .setup_assistant  CMakeLists.txt  README.md  package.xml  plugins.xml
src/dev_arm_moveit_config_v3/config/: dev_arm.ros2_control.xacro  dev_arm.srdf  dev_arm.urdf.xacro  initial_positions.yaml  joint_limits.yaml  kinematics.yaml  moveit_controllers.yaml  ros2_controllers.yaml  rover_servo_params_dev_arm.yaml
src/dev_arm_moveit_config_v3/include/: rviz_module.h
src/dev_arm_moveit_config_v3/launch/: demo.launch.py  dev_arm_moveit_bringup.launch.py  move_group.launch.py  moveit_rviz.launch.py  rsp.launch.py  setup_assistant.launch.py  spawn_controllers.launch.py  static_virtual_joint_tfs.launch.py  warehouse_db.launch.py
src/dev_arm_moveit_config_v3/src/: rviz_module.cpp
src/drive_control/: CMakeLists.txt  package.xml
src/drive_control/include/: chassis_joy_ctrl.h  drive_control.h  motor_control.h  wheel_speed.h
src/drive_control/launch/: drive_control_launch.launch.py  drive_the_rover.launch.py
src/drive_control/src/: chassis_joy_ctrl.cpp  drive_control.cpp  motor_control.cpp  wheel_speed.cpp
src/integration_test/: CMakeLists.txt  brainstorm.txt  package.xml
src/integration_test/src/: assert_node.cpp  example_multiply_by_two_node.cpp  integration_test_fixtures.cpp
src/integration_test/test/: test_arm_pipeline.py  test_launch_test.py
src/ipcamerafeed/: CMakeLists.txt  package.xml  setup.cfg  setup.py
src/ipcamerafeed/ipcamerafeed/: ipcamera.py  ipcamerazoom.py  pitch_tilt_node.py
src/ipcamerafeed/launch/: ipcam_launch.launch.py
src/ipcamerafeed/scripts/: ipcamera.py  ipcamerazoom.py  pitch_tilt_node.py
src/ipcamerafeed/srv/: SetMovement.srv
src/mock/: CMakeLists.txt  package.xml
src/object_detection/: package.xml  requirements.txt  setup.py
src/object_detection/object_detection/: yolo_detector_node.py
src/ptz_cam/: package.xml  setup.cfg  setup.py
src/ptz_cam/ptz_cam/: ipcamera_compress.py  ipcamera_decompress.py  ipcamerazoom.py  pitch_tilt_node.py  test_compression.py
src/ptz_camera/: CMakeLists.txt  package.xml  setup.py
src/ptz_camera/launch/: ipcam_launch.launch.py
src/ptz_camera/scripts/: ipcamerazoom.py  pitch_tilt_node.py
src/ptz_camera/srv/: SetMovement.srv
src/rover_arm_common/: CMakeLists.txt  package.xml
(+724 files in other folders)
