<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>arm_hardware_interface_v2</name>
  <version>0.0.0</version>
  <description>Moteus arm driver — polls motors via CAN-FD, publishes feedback, accepts commands</description>
  <maintainer email="zawadzkirowan@gmail.com">rowan</maintainer>
  <license>TODO: License declaration</license>

  <buildtool_depend>ament_cmake</buildtool_depend>
  <depend>rclcpp</depend>
  <depend>rover_msgs</depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
