<?xml version="1.0"?>
<package format="3">
  <name>aruco_detector</name>
  <version>0.0.0</version>
  <description>ROS 2 package to detect ArUco markers using OpenCV</description>
  <maintainer email="your-email@example.com">Your Name</maintainer>
  <license>TODO: License declaration</license>

  <!-- Dependencies -->
  <buildtool_depend>ament_cmake</buildtool_depend>

  <depend>rclcpp</depend>
  <depend>image_transport</depend>
  <depend>cv_bridge</depend>
  <depend>sensor_msgs</depend>
  <depend>std_msgs</depend>
  <depend>OpenCV</depend>
  <depend>cv2_aruco</depend>  

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
