<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd"
           schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
 <name>ipcamerafeed</name>
 <version>0.0.0</version>
 <description>
   ROS 2 package for streaming an RTSP IP camera and offering ONVIF PTZ control via services.
 </description>
 <maintainer email="cameronbasara@gmail.com">kingcammy</maintainer>
 <license>Apache-2.0</license>


<!-- Build tool -->
 <buildtool_depend>ament_python</buildtool_depend>


 <!-- Core ROS 2 Python -->
 <exec_depend>rclpy</exec_depend>


 <!-- Messages & bridge for images -->
 <exec_depend>sensor_msgs</exec_depend>
 <exec_depend>cv_bridge</exec_depend>


 <!-- Services (if you expose any) -->
 <exec_depend>std_srvs</exec_depend>


 <!-- External Python libraries -->
 <exec_depend>onvif-zeep</exec_depend>
 <exec_depend>keyboard</exec_depend>


 <export>
   <build_type>ament_python</build_type>
 </export>
</package>