<?xml version="1.0"?>
<package format="3">
  <name>ipcamerafeed</name>
  <version>0.0.1</version>
  <description>ROS 2 package for IP camera RTSP streaming and PTZ control via ONVIF and Serial.</description>

  <maintainer email="cameronbasara@gmail.com">kingcammy</maintainer>
  <license>Apache-2.0</license>

  <!-- Build tools -->
  <buildtool_depend>ament_python</buildtool_depend>
  <buildtool_depend>rosidl_default_generators</buildtool_depend>

  <!-- Runtime and build dependencies -->
  <build_depend>rosidl_default_generators</build_depend>
  <exec_depend>rosidl_default_runtime</exec_depend>
  <exec_depend>rclpy</exec_depend>
  <exec_depend>sensor_msgs</exec_depend>
  <exec_depend>cv_bridge</exec_depend>
  <exec_depend>pyserial</exec_depend>
  <exec_depend>onvif-zeep</exec_depend>
  <exec_depend>opencv-python</exec_depend>
  <exec_depend>std_srvs</exec_depend>
  
  <!-- For service -->
  <exec_depend>ipcamerafeed</exec_depend> 

  <!-- For interface generation -->
  <member_of_group>rosidl_interface_packages</member_of_group>


  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
